@@ -1,0 +1,7 @@
+<!-- $Id$ -->
+
+<jwc id="ifMessage">
+<font size="+2">
+	<jwc id="insertMessage"/>
+</font>
+</jwc>
