@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- $Id$ -->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  "http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.BaseComponent</class>
+	<parameters>
+		<allow-informal-parameters>no</allow-informal-parameters>
+	</parameters>
+	<components>
+		<component>
+			<id>ifMessage</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>page.message</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertMessage</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>page.message</property-path>
+				</binding>
+			</bindings>
+		</component>
+	</components>
+</specification>
