@@ -3,10 +3,7 @@
 
 <jwc id="showError"/>
 
-<jwc id="ifMessage">
-<p><font size=+1><jwc id="insertMessage"/></font>
-</jwc>
-
+<jwc id="showMessage"/>
 
 <jwc id="ifShowOwnedBooksHeader">
 <table>
